--- a/src/styles/mystyles.css
+++ b/src/styles/mystyles.css
@@ -4,6 +4,7 @@
   padding:0px;  
   box-sizing: border-box;
   margin:0px;
+  font-family:sans-serif;
 }
 
 .main{
@@ -15,7 +16,7 @@
 h1{
   color: #fff;
   text-shadow: 0 0 10px #fff;
-  border-bottom: 2px dashed #fff;
+  border-bottom: 2px solid #fff;
   top: 1rem;
   font-size: 3em;
   padding: 0.5em;
@@ -32,19 +33,23 @@ h2{
   background-color: #ffffff22;
   padding: 1.5rem;
   border-radius: 10px;
-  overflow-x: scroll;
 }
 
 input{
   margin : 1rem;
   font-size: 1.5em;
-  padding: 0.3rem 1em;
+  padding: 1rem 1em;
   width: 100%;
+  background: transparent;
+  color: #fff;
+  border-radius: 10px;
+  border: 1px solid #fff;
 }
 
 .entry{
   display: flex;
   justify-content: space-between;
+  border: 2px solid #fff
 }
 
 
@@ -53,6 +58,7 @@ input{
   padding: 0.5em;
   width: calc(100%/6);
   border: 1px solid #fff;
+  border-radius: 4px;
 }
 
 @media(max-width: 800px){
@@ -63,4 +69,26 @@ input{
   .cell{
     width: 100%;
   }
+}
+
+
+.h{
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #191970;
+}
+
+.searchbox{
+  display: flex;
+  color: #fff;
+  align-items:center;
+  padding: 1rem;
+} 
+
+.ylabel{
+  font-size: 1.5em;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1rem;
+  color: #000;
 }
