--- a/src/styles/mystyles.css
+++ b/src/styles/mystyles.css
@@ -49,7 +49,7 @@ input{
 .entry{
   display: flex;
   justify-content: space-between;
-  border: 2px solid #fff
+  border: 2px solid #fff;
 }
 
 
@@ -59,16 +59,6 @@ input{
   width: calc(100%/6);
   border: 1px solid #fff;
   border-radius: 4px;
-}
-
-@media(max-width: 800px){
-  .entry{
-    flex-direction: column;
-  }
-  
-  .cell{
-    width: 100%;
-  }
 }
 
 
@@ -91,4 +81,31 @@ input{
   border-radius: 10px;
   padding: 1rem;
   color: #000;
+}
+
+
+@media(max-width: 800px){
+  .main{
+    padding: 0.4rem;
+  }
+  
+  .data{
+    display: flex;
+    min-height: 300px;
+    align-items: flex-start;
+  }
+  
+  .longlist{
+    overflow-y: scroll;
+    width: 100%;
+    height: 300px;
+  }
+  .entry{
+    flex-direction: column;
+    border: 4px solid: 
+  }
+  
+  .cell{
+    width: 100%;
+  }
 }
