--- a/src/styles/mystyles.css
+++ b/src/styles/mystyles.css
@@ -29,6 +29,7 @@ h2{
 }
 
 .data{
+  position: relative;
   color: #fff;
   background-color: #ffffff22;
   padding: 1.5rem;
@@ -84,6 +85,25 @@ input{
 }
 
 
+
+
+.nextbtn{
+  position:absolute;
+  background-color: #fff;
+  bottom: 0.5rem;
+  left: 1.5rem;
+  color: #000;
+  padding: 0.6rem;
+  border-radius: 6px;
+  cursor: pointer;
+  display:none;
+}
+
+.prevbtn{
+  left: 5.5rem;
+}
+
+
 @media(max-width: 800px){
   .main{
     padding: 0.4rem;
@@ -96,9 +116,12 @@ input{
   }
   
   .longlist{
-    overflow-y: scroll;
     width: 100%;
-    height: 300px;
+    height: 224px;
+    overflow-y:  hidden;
+
+/*    overflow-y: scroll;
+    height: 300px;*/
   }
   .entry{
     flex-direction: column;
@@ -107,5 +130,9 @@ input{
   
   .cell{
     width: 100%;
+  }
+  
+  .nextbtn{
+    display: block;
   }
 }
