--- a/src/styles/mystyles.css
+++ b/src/styles/mystyles.css
@@ -7,10 +7,11 @@
   font-family:sans-serif;
 }
 
+
 .main{
   padding: 2rem;
   background-color: #191970;
-  min-height: 100vh;
+  width: 100%;
 }
 
 h1{
@@ -51,6 +52,7 @@ input{
   display: flex;
   justify-content: space-between;
   border: 2px solid #fff;
+  border-radius: 3px;
 }
 
 
@@ -99,6 +101,10 @@ input{
   display:none;
 }
 
+.nextbtn:hover{
+  box-shadow: 0 0 10px #fff;
+}
+
 .prevbtn{
   left: 5.5rem;
 }
@@ -135,4 +141,18 @@ input{
   .nextbtn{
     display: block;
   }
+}
+
+#back{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 0px;
+  top: 0px;
+}
+
+.contents{
+  position: absolute;
+  width: 100%;
+  left: 0px;
 }
